--- a/template/base/home.html
+++ b/template/base/home.html
@@ -53,12 +53,11 @@
                 <h3 class="title">About</h3>
                 <p class="about-details">Lorem ipsum dolor sit amet consectetur adipisicing elit. At sit similique dignissimos minima odio excepturi, possimus, culpa eius aliquid laboriosam reiciendis quos aperiam? Possimus molestiae sunt vitae, quod neque dolor?</p>
                 <div class="social-links-icons">
-                    <i class="fa-brands fa-linkedin"></i>
-                    <i class="fa-brands fa-github"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <i class="fa-brands fa-x-twitter"></i>   
-                    <i class="fa-brands fa-whatsapp"></i>                 
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>               
                 </div>
             </div>
             <div class="footer-contact-cnt">
@@ -67,7 +66,7 @@
                     <p>Have a project idea? Click the button below to email me, and let's make it happen!</p>
                 </div>
                 <div class="mail-btn-cnt">
-                    <button class="mail-btn" type="button"><i class="fa-solid fa-envelope"></i> Email Me</button>
+                    <button class="mail-btn" type="button"><i class="fa-solid fa-envelope"></i> E-Mail Dev</button>
                 </div>
             </div>
             <div class="footer-nav-cnt">
