--- a/template/base/home.html
+++ b/template/base/home.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
     <link rel="icon" href="{% static 'images/logo/logo.png' %}">
+    {% block stylesheet %}
     <!-- Style Sheet -->
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    {% endblock %}
+    {% block title %}
+    <!-- Page Title -->
     <title>Portfolio | Home</title>
+    {% endblock %}
 </head>
 <body>
     {% block nav %}
@@ -39,6 +44,12 @@
             <div class="login-signup-cnt">
                 <a href="{% url 'user_login' %}" class="nav-link"><button type="button" class="signin-signup-btn">Sign In / Sign Up</button></a>
             </div>
+            <!-- <div class="user-profile-cnt">
+                <div class="user-profile">
+                    <img src="{% static 'images/profile/profilepic.jpg' %}" alt="" class="user-profile-photo">
+                </div>
+                <p>Keerthivasansj</p>
+            </div> -->
         </div>
     </nav>
     {% endblock %}
