--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,7 +1,11 @@
 @import url('home.css');
 .profile-header,
 .profile-about-cnt,
-.profile-skills-cnt{
+.profile-skills-cnt,
+.certifications-cnt,
+.experiences-cnt,
+.education-cnt,
+.languages-known-cnt{
     display: flex;
     padding: 40px;
     border-radius: 20px;
@@ -15,7 +19,7 @@
 }
 .profile{
     position: relative;
-    margin-right: 20px;
+    margin-right: 30px;
 }
 .profile>.edit-cnt{
     position: absolute;
@@ -27,14 +31,14 @@
     padding: 8px;
     font-size: 1rem;
     border-radius: 50%;
-    border: 1px solid rgb(37, 149, 224);
-    color: rgb(37, 149, 224);
+    border: 2px solid #5170d7;
+    color: #5170d7;
     vertical-align: middle;
     cursor: pointer;
 }
 .profile-photo-cnt{
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: 150px;
     border-radius: 50%;
     border: 1px solid #ccc;
     overflow: hidden;
@@ -44,23 +48,40 @@
     align-items: center;
 }
 .profile-photo{
-    height: 100px;
+    height: 150px;
     max-width: 100%;
     margin: auto;
+}
+.user-identity-cnt{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 .name-cnt{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 }
 .location{
     font-size: 1rem;
     line-height: 2rem;
     color: gray;
 }
+.resume{
+    padding: 12px 20px;
+    font-size: 1rem;
+    color: white;
+    background-color: #5170d7;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.resume>i{
+    margin-right: 10px;
+}
 .share-btn{
     background-color: transparent;
-    color: #007FFF;
+    color: #5170d7;
     font-size: 18px;
     border: none;
     cursor: pointer;
@@ -70,18 +91,28 @@
     font-size: 20px;
 }
 .profile-about-cnt,
-.profile-skills-cnt{
+.education-cnt,
+.profile-skills-cnt,
+.certifications-cnt,
+.experiences-cnt,
+.languages-known-cnt{
     position: relative;
     flex-direction: column;
 }
-.profile-about-cnt>.edit-cnt,
-.profile-skills-cnt>.edit-cnt{
-    position: absolute;
-    top: 20px;
-    right: 20px;
+.profile-about-title-cnt,
+.institution-name-cnt,
+.profile-skills-title-cnt,
+.job-role-cnt,
+.languages-known-title-cnt{
+    display: flex;
+    gap: 20px;
 }
 .profile-about-title,
-.profile-skills-title{
+.education-title,
+.profile-skills-title,
+.certification-title,
+.experiences-title,
+.languages-known-title{
     margin-bottom: 1rem;
 }
 .profile-about-me{
@@ -89,12 +120,14 @@
     font-size: 1rem;
     line-height: 2rem;
 }
-.profle-skills-list{
+.profle-skills-list,
+.languages-known-list{
     display: flex;
     flex-wrap: wrap;
     width: 90%;
 }
-.skills{
+.skills,
+.languages{
     background-color: #f1f1f1;
     color: gray;
     padding-inline: 14px;
@@ -102,4 +135,76 @@
     font-size: 1rem;
     line-height: 2rem;
     border-radius: 1rem;
+}
+.certificate{
+    display: flex;
+    align-items: center;
+    position: relative;
+    gap: 30px;
+    padding: 30px;
+    border-top: 1px solid #ccc;
+}
+.certificate-provier-logo-cnt{
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border-radius: 5px;
+}
+.add-btn{
+    font-size: 30px;
+    color: #5170d7;
+    cursor: pointer;
+}
+.delete-btn{
+    color: #5170d7;
+    font-size: 25px;
+    cursor: pointer;
+    margin-left: 20px;
+}
+.education-title-cnt,
+.certification-title-cnt,
+.experiences-title-cnt{
+    display: flex;
+    justify-content: space-between;
+}
+.certificate-details-cnt{
+    display: flex;
+    width: 85%;
+    justify-content: space-between;
+}
+.certificate-details,
+.experience-detail,
+.education-information-cnt{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.certificate-name-cnt{
+    display: flex;
+    gap: 20px;
+}
+.issued-details{
+    font-size: 1rem;
+    line-height: 2rem;
+}
+.view-certificate-btn{
+    cursor: pointer;
+    padding: 10px 20px;
+    font-size: 1rem;
+    font-weight: 700;
+    width: 200px;
+    color: #5170d7;
+    border: 2px solid #5170d7;
+    background-color: transparent;
+    border-radius: 30px;
+}
+.view-certificate-btn>i{
+    margin-right: 10px;
+}
+.experience-detail-cnt,
+.education-detail-cnt{
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid #ccc;
+    padding: 40px 0;
 }
