--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block main %}
+<!-- Profile card -->
 <div class="profile-header">
     <div class="profile-cnt">
         <div class="profile">
@@ -25,27 +26,169 @@
             <div class="location">
                 <p><i class="fa-solid fa-location-dot"></i> Trichy, India</p>
             </div>
+            <button type="button" class="resume"><i class="fa-solid fa-file"></i> Resume</button>
         </div>
     </div>
-    <div class="share-btn-cnt">
+    <div class="share-cnt">
         <button type="button" class="share-btn">Share <i class="fa-solid fa-arrow-up-from-bracket"></i></button>
     </div>
 </div>
+<!-- About -->
 <div class="profile-about-cnt">
     <div class="profile-about-title-cnt">
         <h1 class="profile-about-title">Expert Web Designer with Django experience</h1>
+        <div class="edit-cnt">
+            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+        </div>
     </div>
     <div class="profle-about-me-cnt">
         <p class="profile-about-me">
             Hello! I'm Keerthivasan S J, a passionate Python programmer and web developer. I thrive on turning complex problems into simple, beautiful solutions. With a solid foundation in Python and hands-on experience from my web development internship, I'm eager to bring my skills to real-world projects. Let's collaborate to create something amazing!
         </p>
     </div>
-    <div class="edit-cnt">
-        <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+</div>
+<!-- Experience -->
+<div class="experiences-cnt">
+    <div class="experiences-title-cnt">
+        <h1 class="experiences-title">Experirence</h1>
+        <div class="add-btn">
+            <i class="fa-regular fa-square-plus"></i>
+        </div>
+    </div>
+    <div class="experiences-list">
+        <!--  -->
+        <div class="experience-detail-cnt">
+            <div class="experience-detail">
+                <div class="job-role-cnt">
+                    <h2 class="job-role">Web Developer Intern | JSW Steel</h2>
+                    <div class="edit-cnt">
+                        <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+                    </div>
+                </div>
+                <div class="duration">July 2024 - July 2024</div>
+            </div>
+            <div class="delete-btn">
+                <i class="fa-regular fa-trash-can"></i>
+            </div>
+        </div>
+        <!--  -->
     </div>
 </div>
+<!-- Education -->
+<div class="education-cnt">
+    <div class="education-title-cnt">
+        <h1 class="education-title">Education</h1>
+        <div class="add-btn">
+            <i class="fa-regular fa-square-plus"></i>
+        </div>
+    </div>
+    <div class="education-list">
+        <!--  -->
+        <div class="education-detail-cnt">
+            <div class="education-detail">
+                <div class="education-information-cnt">
+                    <div class="institution-name-cnt">
+                        <h2 class="institution-name">K Ramakrishnan College of Technology</h2>
+                        <div class="edit-cnt">
+                            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+                        </div>
+                    </div>
+                    <h4 class="degree">Bachelor of Engineering (BEng),</h4>
+                    <p class="area-of-study">Computer Science</p>
+                    <p class="duration">July 2022 - May 2026</p>
+                </div>
+            </div>
+            <div class="delete-btn">
+                <i class="fa-regular fa-trash-can"></i>
+            </div>
+        </div>
+        <!--  -->
+        <div class="education-detail-cnt">
+            <div class="education-detail">
+                <div class="education-information-cnt">
+                    <div class="institution-name-cnt">
+                        <h2 class="institution-name">Malco Vidhyalaya Matric Hir Sec School</h2>
+                        <div class="edit-cnt">
+                            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+                        </div>
+                    </div>
+                    <h4 class="degree">Higher Secondary School Certificate,</h4>
+                    <p class="area-of-study">Maths-Computer Science</p>
+                    <p class="duration">July 2021 - May 2022</p>
+                </div>
+            </div>
+            <div class="delete-btn">
+                <i class="fa-regular fa-trash-can"></i>
+            </div>
+        </div>
+        <!--  -->
+    </div>
+</div>
+<!-- Certificates -->
+<div class="certifications-cnt">
+    <div class="certification-title-cnt">
+        <h1 class="certification-title">Certifications</h1>
+        <div class="add-btn">
+            <i class="fa-regular fa-square-plus"></i>
+        </div>
+    </div>
+    <div class="certificate-list">
+        <div class="certificate">
+            <div class="certificate-provier-logo-cnt">
+                <img src="{% static 'images/icons/certificateicon.png' %}" alt="" class="certificate-provier-logo" width="100px">
+            </div>
+            <div class="certificate-details-cnt">
+                <div class="certificate-details">
+                    <div class="certificate-name-cnt">
+                        <h2 class="certificate-name">Programming, Data Structures and Algorithms using Python</h2>
+                        <div class="edit-cnt">
+                            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+                        </div>
+                    </div>
+                    <div class="issued-details">
+                        <h4 class="issued-by">Issued By: NPTEL</h4>
+                        <p class="issued-by">Issued On: April 2024</p>
+                    </div>
+                    <button type="button" class="view-certificate-btn"><i class="fa-solid fa-arrow-up-right-from-square"></i> View Certificate</button>
+                </div>
+                <div class="delete-btn">
+                    <i class="fa-regular fa-trash-can"></i>
+                </div>
+            </div>
+        </div>
+        <div class="certificate">
+            <div class="certificate-provier-logo-cnt">
+                <img src="{% static 'images/icons/certificateicon.png' %}" alt="" class="certificate-provier-logo" width="100px">
+            </div>
+            <div class="certificate-details-cnt">
+                <div class="certificate-details">
+                    <div class="certificate-name-cnt">
+                        <h2 class="certificate-name">Joy of Computing Using Python</h2>
+                        <div class="edit-cnt">
+                            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+                        </div>
+                    </div>
+                    <div class="issued-details">
+                        <h4 class="issued-by">Issued By: NPTEL</h4>
+                        <p class="issued-by">Issued On: November 2023</p>
+                    </div>
+                    <button type="button" class="view-certificate-btn"><i class="fa-solid fa-arrow-up-right-from-square"></i> View Certificate</button>
+                </div>
+                <div class="delete-btn">
+                    <i class="fa-regular fa-trash-can"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Skills -->
 <div class="profile-skills-cnt">
-    <h1 class="profile-skills-title">Skills</h1>
+    <div class="profile-skills-title-cnt">
+        <h1 class="profile-skills-title">Skills</h1>
+        <div class="edit-cnt">
+            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+        </div>
+    </div>
     <div class="profle-skills-list">
         <span class="skills">Django</span>
         <span class="skills">Html</span>
@@ -60,9 +203,18 @@
         <span class="skills">GitHub</span>
         <span class="skills">Problem Solving</span>
     </div>
-    <div class="edit-cnt">
-        <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+</div>
+<!-- Languages Known -->
+<div class="languages-known-cnt">
+    <div class="languages-known-title-cnt">
+        <h1 class="languages-known-title">Languages Known</h1>
+        <div class="edit-cnt">
+            <button type="button" class="edit-btn"><i class="fa-solid fa-pen"></i></button>
+        </div>
+    </div>
+    <div class="languages-known-list">
+        <span class="languages">Tamil</span>
+        <span class="languages">English</span>
     </div>
 </div>
-<!-- <h1>{{uname}}</h1> -->
 {% endblock %}
