--- a/template/auth/login.html
+++ b/template/auth/login.html
@@ -31,6 +31,7 @@
                 <div class="input-box">
                     <input type="text" name="uname_or_email" id="uname_or_email" placeholder="Username or Email">
                     <i class="fa-solid fa-user"></i>
+                    <!-- <div class="error">Username or Email required</div> -->
                 </div>
                 <div class="input-box">
                     <input type="password" name="password" id="password" placeholder="Password">
