--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -55,7 +55,7 @@
 <!-- Experience -->
 <div class="experiences-cnt">
     <div class="experiences-title-cnt">
-        <h1 class="experiences-title">Experirence <i class="fa-solid fa-briefcase"></i></h1>
+        <h1 class="experiences-title">Experience <i class="fa-solid fa-briefcase"></i></h1>
         <div class="add-btn">
             <i class="fa-regular fa-square-plus"></i>
         </div>
@@ -234,15 +234,29 @@
         <span class="skills intermediate">Django</span>
         <span class="skills expert">Html</span>
         <span class="skills beginner">CSS</span>
-        <span class="skills">Java</span>
-        <span class="skills">JavaScript</span>
-        <span class="skills">Python</span>
-        <span class="skills">SQL</span>
-        <span class="skills">MySQL</span>
-        <span class="skills">C</span>
-        <span class="skills">Git</span>
-        <span class="skills">GitHub</span>
-        <span class="skills">Problem Solving</span>
+        <span class="skills intermediate">Java</span>
+        <span class="skills intermediate">JavaScript</span>
+        <span class="skills expert">Python</span>
+        <span class="skills beginner">SQL</span>
+        <span class="skills beginner">MySQL</span>
+        <span class="skills beginner">C</span>
+        <span class="skills beginner">Git</span>
+        <span class="skills beginner">GitHub</span>
+        <span class="skills intermediate">Problem Solving</span>
+    </div>
+    <div class="profeciancy-level-cnt">
+        <div class="profeciancy-level">
+            <div class="circle beginner-level"></div>
+            <p>Beginner</p>
+        </div>
+        <div class="profeciancy-level">
+            <div class="circle intermediate-level"></div>
+            <p>Intermediate</p>
+        </div>
+        <div class="profeciancy-level">
+            <div class="circle expert-level"></div>
+            <p>Expert</p>
+        </div>
     </div>
 </div>
 <!-- Languages Known -->
@@ -254,8 +268,22 @@
         </div>
     </div>
     <div class="languages-known-list">
-        <span class="languages intermediate">Tamil</span>
+        <span class="languages expert">Tamil</span>
         <span class="languages intermediate">English</span>
+    </div>
+    <div class="profeciancy-level-cnt">
+        <div class="profeciancy-level">
+            <div class="circle beginner-level"></div>
+            <p>Beginner</p>
+        </div>
+        <div class="profeciancy-level">
+            <div class="circle intermediate-level"></div>
+            <p>Intermediate</p>
+        </div>
+        <div class="profeciancy-level">
+            <div class="circle expert-level"></div>
+            <p>Expert</p>
+        </div>
     </div>
 </div>
 {% endblock %}
