--- a/template/auth/login.html
+++ b/template/auth/login.html
@@ -58,7 +58,9 @@
         </form>
         {% endblock %}
     </main>
+    {% block script %}
     <!-- Script file -->
     <script src="{% static 'js/login.js' %}"></script>
+    {% endblock %}
 </body>
 </html>
