--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -11,6 +11,7 @@
     padding: 40px;
     border-radius: 20px;
     border: 1px solid #ccc;
+    background-color: white;
 }
 .profile-header{
     justify-content: space-between;
@@ -25,8 +26,8 @@
 }
 .profile>.edit-cnt{
     position: absolute;
-    right: 20px;
-    bottom: 20px;
+    right: 25px;
+    bottom: 25px;
 }
 .edit-btn{
     background-color: white;
@@ -38,20 +39,11 @@
     vertical-align: middle;
     cursor: pointer;
 }
-.profile>.edit-cnt>.edit-btn{
-    padding: 10px;
-    font-size: 1rem;
-    border-radius: 50%;
-    border: 2px solid #5170d7;
-    color: #5170d7;
-    vertical-align: middle;
-    cursor: pointer;
-}
 .profile-photo-cnt{
     height: 300px;
     width: 300px;
     border-radius: 50%;
-    border: 1px solid #ccc;
+    border: 4px solid #5170d7;
     overflow: hidden;
     object-fit: contain;
     display: flex;
