--- a/template/user/profile.html
+++ b/template/user/profile.html
@@ -30,7 +30,7 @@
             </div>
             <div class="btn-cnt">
                 <span class="open-to-work"><i class="fa-solid fa-briefcase"></i> Open to Work</span>
-                <button type="button" class="resume"><i class="fa-solid fa-download"></i> Resume</button>
+                <button type="button" class="resume"><i class="fa-solid fa-file"></i> Resume</button>
             </div>
         </div>
     </div>
